--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,15 @@ body{
 
 #welcomeScreen{
 	font: sans-serif;
-	color: #0f5ddb;
+	color: #000000;
 	
 }
 	
 #logo{
+	position: relative;
+	align-content: center;
 	font: 100%
-	color:#0f5ddb;
+	color:#000000;
   	background-color:#fff;
 }
 
@@ -34,13 +36,13 @@ h3{
 
 
 input{
-	color:#0f5ddb;
+	color:#000000;
 }
 input.hover{
 	background-color: #fff;
 }
 input.text{
-	color:#0f5ddb;
+	color:#000000;
 }
 
 .label-icon{
@@ -65,7 +67,7 @@ input.text{
 
 #artist-name{
 	size: 24px;
-	color: #0f5ddb;
+	color: #000000;
 
 
 }
@@ -81,5 +83,5 @@ input.text{
 h4{
 	font-family: sans-serif;
 	font-size: 16px;
-	color: #0f5ddb
+	color: #0000000
 }
