--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 
-#spotify, #youtube, #wikipedia, #news, #twitter, #events{
+#spotify, #youtube, #wikipedia, #news, #twitter, #events, #related-artist{
 	height: 300px;
 	width: 400px;
 	overflow: auto;
